--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   
   <title>Frontend Mentor | Recipe page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!--TailWindCSS-->
+  <link rel="stylesheet" href="output.css">
 </head>
 <body>
 
@@ -71,7 +68,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Pablo Silva</a>.
   </div>
 </body>
 </html>
