--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body class="bg-eggshell">
   <div
-    class="bg-rose-white w-2/4 grid grid-cols-1 justify-center justify-items-center py-10 px-10 m-auto my-10 rounded-xl h-screen">
+    class="bg-rose-white w-2/4 grid grid-cols-1 justify-center justify-items-center py-10 px-10 m-auto my-10 rounded-xl">
     <div class="w-full pb-10">
       <img src="assets/images/image-omelette.jpeg" alt="image-omelette" class="rounded-md" />
     </div>
